--- a/open_when.html
+++ b/open_when.html
@@ -57,7 +57,7 @@
 </div>
 
 <div id="cantSleep" class="card">
-  <img src="https://via.placeholder.com/400x300.png?text=Cant+Sleep" alt="Open when you can't sleep">
+  <img src="images/cant_sleep.jpg" alt="Open when you can't sleep">
   <p>Try counting sheep... or thinking of me 😉</p>
   <button class="back-btn" onclick="goBack()">Back</button>
 </div>
