--- a/open_when.html
+++ b/open_when.html
@@ -51,7 +51,7 @@
 <!-- Карточки -->
 <!-- В каждой карточке поменяй src на ссылку на свою картинку -->
 <div id="missMe" class="card">
-  <img src="https://via.placeholder.com/400x300.png?text=Miss+Me" alt="Open when you miss me">
+  <img src="images/miss_me.jpg" alt="Open when you miss me">
   <p>Thinking of you, dreaming of our next hug</p>
   <button class="back-btn" onclick="goBack()">Back</button>
 </div>
@@ -69,7 +69,7 @@
 </div>
 
 <div id="overthinking" class="card">
-  <img src="https://via.placeholder.com/400x300.png?text=Overthinking" alt="Open when you’re overthinking">
+  <img src="images/overthinking.jpg" alt="Open when you’re overthinking">
   <p>Take a deep breath, everything will be fine 🌸</p>
   <button class="back-btn" onclick="goBack()">Back</button>
 </div>
