--- a/open_when.html
+++ b/open_when.html
@@ -24,15 +24,15 @@
   <button class="btn" onclick="openCard('cantSleep')">Open when you can't sleep</button>
   <button class="btn" onclick="openCard('lonely')">Open when you feel lonely</button>
   <button class="btn" onclick="openCard('overthinking')">Open when you’re overthinking</button>
-  <button class="btn" onclick="openCard('doubt')">Open when you doubt yourself</button>
+  <--<button class="btn" onclick="openCard('doubt')">Open when you doubt yourself</button>-->
   <button class="btn" onclick="openCard('tired')">Open when you’re tired</button>
   <button class="btn" onclick="openCard('motivation')">Open when you need motivation</button>
-  <button class="btn" onclick="openCard('smiling')">Open when you’re smiling</button>
-  <button class="btn" onclick="openCard('feelClose')">Open when you want to feel close</button>
-  <button class="btn" onclick="openCard('thinkOfMe')">Open when you think of me</button>
-  <button class="btn" onclick="openCard('goodMood')">Open when you’re in a good mood</button>
-  <button class="btn" onclick="openCard('amazingDay')">Open when you had an amazing day</button>
-  <button class="btn" onclick="openCard('valentine')">Open on Valentine’s Day</button>
+  <!-- <button class="btn" onclick="openCard('smiling')">Open when you’re smiling</button> -->
+  <!-- <button class="btn" onclick="openCard('feelClose')">Open when you want to feel close</button> -->
+  <!-- <button class="btn" onclick="openCard('thinkOfMe')">Open when you think of me</button> -->
+  <!-- <button class="btn" onclick="openCard('goodMood')">Open when you’re in a good mood</button> -->
+  <!-- <button class="btn" onclick="openCard('amazingDay')">Open when you had an amazing day</button> -->
+  <!-- <button class="btn" onclick="openCard('valentine')">Open on Valentine’s Day</button> -->
   <button class="btn" onclick="openCard('leloMischief')">Open when Lelo is up to mischief</button>
   <button class="btn" onclick="openCard('clientsCrazy')">Open when clients drive you crazy</button>
   <button class="btn" onclick="openCard('gym')">Open when you hit the gym</button>
@@ -49,22 +49,21 @@
 </div>
 
 <!-- Карточки -->
-<!-- В каждой карточке поменяй src на ссылку на свою картинку -->
 <div id="missMe" class="card">
+  <p>I know we’re apart right now, but every time you miss me, remember I’m thinking of you too 💌. Close your eyes and imagine we’re together for a moment.</p>
   <img src="images/miss_me.jpg" alt="Open when you miss me">
-  <p>Thinking of you, dreaming of our next hug</p>
   <button class="back-btn" onclick="goBack()">Back</button>
 </div>
 
 <div id="cantSleep" class="card">
+  <p>Insomnia sucks, I know 😴. Take a deep breath, imagine something funny we did together, and let your mind relax. Sweet dreams are coming soon.</p>
   <img src="images/cant_sleep.jpg" alt="Open when you can't sleep">
-  <p>Try counting sheep... or thinking of me 😉</p>
   <button class="back-btn" onclick="goBack()">Back</button>
 </div>
 
 <div id="lonely" class="card">
+  <p>Feeling lonely is normal sometimes 🌙. Just remember you’re never truly alone — I’m always with you in thoughts and heart, and your little buddy Lelo is probably causing chaos too 🐶.</p>
   <img src="https://via.placeholder.com/400x300.png?text=Lonely" alt="Open when you feel lonely">
-  <p>Even when you feel alone, I’m here in your thoughts 💛</p>
   <button class="back-btn" onclick="goBack()">Back</button>
 </div>
 
@@ -74,11 +73,11 @@
   <button class="back-btn" onclick="goBack()">Back</button>
 </div>
 
-<div id="doubt" class="card">
+<!-- <div id="doubt" class="card">
   <img src="https://via.placeholder.com/400x300.png?text=Doubt" alt="Open when you doubt yourself">
   <p>Believe in yourself—you’re amazing 🌟</p>
   <button class="back-btn" onclick="goBack()">Back</button>
-</div>
+</div> -->
 
 <div id="tired" class="card">
   <img src="https://via.placeholder.com/400x300.png?text=Tired" alt="Open when you’re tired">
@@ -92,41 +91,41 @@
   <button class="back-btn" onclick="goBack()">Back</button>
 </div>
 
-<div id="smiling" class="card">
+<!-- <div id="smiling" class="card">
   <img src="https://via.placeholder.com/400x300.png?text=Smiling" alt="Open when you’re smiling">
   <p>Smile bright, it suits you 😄</p>
   <button class="back-btn" onclick="goBack()">Back</button>
-</div>
+</div> -->
 
-<div id="feelClose" class="card">
+<!-- <div id="feelClose" class="card">
   <img src="https://via.placeholder.com/400x300.png?text=Feel+Close" alt="Open when you want to feel close">
   <p>Even far away, we’re together in spirit 💖</p>
   <button class="back-btn" onclick="goBack()">Back</button>
-</div>
+</div> -->
 
-<div id="thinkOfMe" class="card">
+<!-- <div id="thinkOfMe" class="card">
   <img src="https://via.placeholder.com/400x300.png?text=Think+of+Me" alt="Open when you think of me">
   <p>Hope I pop into your thoughts 😉</p>
   <button class="back-btn" onclick="goBack()">Back</button>
-</div>
+</div> -->
 
-<div id="goodMood" class="card">
+<!-- <div id="goodMood" class="card">
   <img src="https://via.placeholder.com/400x300.png?text=Good+Mood" alt="Open when you’re in a good mood">
   <p>Share your smile with the world 😁</p>
   <button class="back-btn" onclick="goBack()">Back</button>
-</div>
+</div> -->
 
-<div id="amazingDay" class="card">
+<!-- <div id="amazingDay" class="card">
   <img src="https://via.placeholder.com/400x300.png?text=Amazing+Day" alt="Open when you had an amazing day">
   <p>So glad your day was awesome 🎉</p>
-  <button class="back-btn" onclick="goBack()">Back</button>
+  <button class="back-btn" onclick="goBack()">Back</button> -->
 </div>
 
-<div id="valentine" class="card">
+<!-- <div id="valentine" class="card">
   <img src="https://via.placeholder.com/400x300.png?text=Valentine" alt="Open on Valentine’s Day">
   <p>Happy Valentine’s Day! ❤️</p>
   <button class="back-btn" onclick="goBack()">Back</button>
-</div>
+</div> -->
 
 <div id="leloMischief" class="card">
   <img src="https://via.placeholder.com/400x300.png?text=Lelo+Mischief" alt="Open when Lelo is up to mischief">
