--- a/open_when.html
+++ b/open_when.html
@@ -24,7 +24,7 @@
   <button class="btn" onclick="openCard('cantSleep')">Open when you can't sleep</button>
   <button class="btn" onclick="openCard('lonely')">Open when you feel lonely</button>
   <button class="btn" onclick="openCard('overthinking')">Open when you’re overthinking</button>
-  <--<button class="btn" onclick="openCard('doubt')">Open when you doubt yourself</button>-->
+  <!-- <button class="btn" onclick="openCard('doubt')">Open when you doubt yourself</button> -->
   <button class="btn" onclick="openCard('tired')">Open when you’re tired</button>
   <button class="btn" onclick="openCard('motivation')">Open when you need motivation</button>
   <!-- <button class="btn" onclick="openCard('smiling')">Open when you’re smiling</button> -->
@@ -63,13 +63,13 @@
 
 <div id="lonely" class="card">
   <p>Feeling lonely is normal sometimes 🌙. Just remember you’re never truly alone — I’m always with you in thoughts and heart, and your little buddy Lelo is probably causing chaos too 🐶.</p>
-  <img src="https://via.placeholder.com/400x300.png?text=Lonely" alt="Open when you feel lonely">
+  <img src="images/lonely.jpg" alt="Open when you feel lonely">
   <button class="back-btn" onclick="goBack()">Back</button>
 </div>
 
 <div id="overthinking" class="card">
-  <img src="images/overthinking.jpg" alt="Open when you’re overthinking">
-  <p>Take a deep breath, everything will be fine 🌸</p>
+  <p>Stop overthinking, love 💭. Breathe in, breathe out. Focus on one small thing you can enjoy right now, even if it’s just a cup of tea or a funny memory we share.</p>
+  <img src="images/overthinking.jpg" alt="Open when you’re overthinking"> 
   <button class="back-btn" onclick="goBack()">Back</button>
 </div>
 
@@ -80,14 +80,14 @@
 </div> -->
 
 <div id="tired" class="card">
-  <img src="https://via.placeholder.com/400x300.png?text=Tired" alt="Open when you’re tired">
-  <p>Rest a little, you deserve it 💤</p>
+  <p>Rest is important, darling 😴. Let yourself take a break, put your feet up, and remember: it’s okay to pause. Tomorrow is another day to shine.</p>
+  <img src="images/tired.jpg" alt="Open when you’re tired">
   <button class="back-btn" onclick="goBack()">Back</button>
 </div>
 
 <div id="motivation" class="card">
-  <img src="https://via.placeholder.com/400x300.png?text=Motivation" alt="Open when you need motivation">
-  <p>You got this! Keep going 💪</p>
+  <p>You can do this 🌟! Every step counts, even the tiny ones. Keep moving forward — I’m rooting for you and I know you’re amazing.</p>
+  <img src="images/motivation.jpg" alt="Open when you need motivation">  
   <button class="back-btn" onclick="goBack()">Back</button>
 </div>
 
@@ -128,38 +128,38 @@
 </div> -->
 
 <div id="leloMischief" class="card">
-  <img src="https://via.placeholder.com/400x300.png?text=Lelo+Mischief" alt="Open when Lelo is up to mischief">
-  <p>Uh oh, Lelo strikes again 🐶</p>
+  <p>Uh oh, I bet Lelo is keeping life interesting again 🐶✨</p>
+  <img src="images/lelo.jpg" alt="Open when Lelo is up to mischief">  
   <button class="back-btn" onclick="goBack()">Back</button>
 </div>
 
 <div id="clientsCrazy" class="card">
-  <img src="https://via.placeholder.com/400x300.png?text=Clients+Crazy" alt="Open when clients drive you crazy">
-  <p>Take a deep breath, you survived them 😉</p>
+  <p>Those Indians again, huh? 😅 Take a pause, breathe, and remember: you’re a pro and you can handle anything. And don't throw your telephone at them please... Maybe reward yourself after with something nice!</p>
+  <img src="images/clients.jpg" alt="Open when clients drive you crazy">  
   <button class="back-btn" onclick="goBack()">Back</button>
 </div>
 
 <div id="gym" class="card">
-  <img src="https://via.placeholder.com/400x300.png?text=Gym" alt="Open when you hit the gym">
-  <p>Time to grow those muscles 💪</p>
+  <p>Time to grow muscles 💪✨ Keep sweating 🏋️‍♂️ and smiling 😁 I’m cheering for you 💖</p>
+  <img src="images/gym.jpg" alt="Open when you hit the gym">
   <button class="back-btn" onclick="goBack()">Back</button>
 </div>
 
 <div id="dictatorMovie" class="card">
-  <img src="https://via.placeholder.com/400x300.png?text=Dictator" alt="Open when you watch The Dictator">
-  <p>Alisson Burgers, anyone? 🍔</p>
+  <p>Time for some Alisson Burgers 🍔 or a reminder that Employees Mustwashhaands 🧼😆 Laugh a little 🎬 I’m laughing with you too 💖</p>
+  <img src="images/dictator.jpg" alt="Open when you watch The Dictator"> 
   <button class="back-btn" onclick="goBack()">Back</button>
 </div>
 
 <div id="visa" class="card">
-  <img src="https://via.placeholder.com/400x300.png?text=Visa" alt="Open when you get your Russian visa">
-  <p>Congrats on getting your visa! ✈️</p>
+  <p>Congrats on getting your visa! ✈️ Countdown officially starts 🇷🇺✨ Can’t wait to see you 💌</p>  
+  <img src="images/visa.jpg" alt="Open when you get your Russian visa">
   <button class="back-btn" onclick="goBack()">Back</button>
 </div>
 
 <div id="yellowCar" class="card">
-  <img src="https://via.placeholder.com/400x300.png?text=Yellow+Car" alt="Open when you spot a yellow car first">
-  <p>I saw it first… you get a punch! 👊</p>
+  <p>Haha, I spotted the yellow car first 🚗💛! You owe me a playful punch 👊😆 — just a little reminder that I’m paying attention </p>
+  <img src="images/car.jpg" alt="Open when you spot a yellow car first">  
   <button class="back-btn" onclick="goBack()">Back</button>
 </div>
 
@@ -183,7 +183,7 @@
 
 <div id="sick" class="card">
   <img src="https://via.placeholder.com/400x300.png?text=Sick" alt="Open when you feel sick">
-  <p>Hope you feel better soon 🌸</p>
+  <p>Aw, feeling under the weather 🤒? Rest up, drink something warm, and imagine I’m bringing you soup and silly jokes to cheer you up.</p>
   <button class="back-btn" onclick="goBack()">Back</button>
 </div>
 
