--- a/open_when.html
+++ b/open_when.html
@@ -39,7 +39,7 @@
   <button class="btn" onclick="openCard('dictatorMovie')">Open when you watch The Dictator</button>
   <button class="btn" onclick="openCard('visa')">Open when you get your Russian visa</button>
   <button class="btn" onclick="openCard('yellowCar')">Open when you spot a yellow car first</button>
-  <button class="btn" onclick="openCard('dubai')">Open when Dubai feels too hot or far</button>
+  <button class="btn" onclick="openCard('dubai')">Open when Dubai feels too hot</button>
   <button class="btn" onclick="openCard('hug')">Open when you need a hug</button>
   <button class="btn" onclick="openCard('monday')">Open when it’s Monday</button>
   <button class="btn" onclick="openCard('sick')">Open when you feel sick</button>
@@ -164,44 +164,44 @@
 </div>
 
 <div id="dubai" class="card">
-  <img src="https://via.placeholder.com/400x300.png?text=Dubai" alt="Open when Dubai feels too hot or far">
-  <p>Missing me from afar ☀️🏙️</p>
+  <p>Imagine I’m there with you 💖 Even from afar ☀️🏙️</p>
+  <img src="images/dubai.jpg" alt="Open when Dubai feels too hot or far">  
   <button class="back-btn" onclick="goBack()">Back</button>
 </div>
 
 <div id="hug" class="card">
-  <img src="https://via.placeholder.com/400x300.png?text=Hug" alt="Open when you need a hug">
-  <p>Sending you a virtual hug 🤗</p>
+  <p>Sending you the biggest virtual hug 🤗. Imagine me wrapping my arms around you — hope it makes you smile and feel a little closer to me</p>  
+  <img src="images/hug.jpg" alt="Open when you need a hug">
   <button class="back-btn" onclick="goBack()">Back</button>
 </div>
 
 <div id="monday" class="card">
-  <img src="https://via.placeholder.com/400x300.png?text=Monday" alt="Open when it’s Monday">
-  <p>Good luck surviving Monday! ☕</p>
+  <p>Mondays are tough 🌞. Take it slow, grab your favorite coffee, and remember you’re capable of making this week great ☕</p>
+  <img src="images/monday.jpg" alt="Open when it’s Monday">  
   <button class="back-btn" onclick="goBack()">Back</button>
 </div>
 
 <div id="sick" class="card">
-  <img src="https://via.placeholder.com/400x300.png?text=Sick" alt="Open when you feel sick">
   <p>Aw, feeling under the weather 🤒? Rest up, drink something warm, and imagine I’m bringing you soup and silly jokes to cheer you up.</p>
+  <img src="images/sick.jpg" alt="Open when you feel sick">    
   <button class="back-btn" onclick="goBack()">Back</button>
 </div>
 
 <div id="ramadanStart" class="card">
-  <img src="https://via.placeholder.com/400x300.png?text=Ramadan+Start" alt="Open when Ramadan begins">
-  <p>Ramadan Mubarak! 🌙✨</p>
+  <p>Ramadan Kareem 🌙✨! Wishing you peaceful days and meaningful moments. I’m thinking of you and sending warm vibes.</p>
+  <img src="images/ramadan_start.jpg" alt="Open when Ramadan begins">  
   <button class="back-btn" onclick="goBack()">Back</button>
 </div>
 
 <div id="ramadanEnd" class="card">
-  <img src="https://via.placeholder.com/400x300.png?text=Ramadan+End" alt="Open when Ramadan ends">
-  <p>Eid Mubarak! 🌙🎉</p>
+  <p>Eid Mubarak 🌙🎉! Hope you had a meaningful month. Celebrate, enjoy, and let’s plan some fun together soon</p>
+  <img src="images/ramadan_end.jpg" alt="Open when Ramadan ends">
   <button class="back-btn" onclick="goBack()">Back</button>
 </div>
 
 <div id="songReminds" class="card">
-  <img src="https://via.placeholder.com/400x300.png?text=Song+Reminds+Me" alt="Open when a song reminds you of me">
-  <p>This song made me think of you 🎵❤️</p>
+  <p>Ah, that song popped up 🎵💖! Every note brings a little memory of us — hope it makes you smile and think of me too ❤️</p>
+  <img src="images/song.jpg" alt="Open when a song reminds you of me">  
   <button class="back-btn" onclick="goBack()">Back</button>
 </div>
 
