--- a/open_when.html
+++ b/open_when.html
@@ -128,6 +128,7 @@
 </div> -->
 
 <div id="leloMischief" class="card">
+  <h1>Open when Lelo is up to mischief</h1>
   <p>Uh oh, I bet Lelo is keeping life interesting again 🐶✨</p>
   <img src="images/lelo.jpg" alt="Open when Lelo is up to mischief">  
   <button class="back-btn" onclick="goBack()">Back</button>
