--- a/open_when.html
+++ b/open_when.html
@@ -24,15 +24,8 @@
   <button class="btn" onclick="openCard('cantSleep')">Open when you can't sleep</button>
   <button class="btn" onclick="openCard('lonely')">Open when you feel lonely</button>
   <button class="btn" onclick="openCard('overthinking')">Open when you’re overthinking</button>
-  <!-- <button class="btn" onclick="openCard('doubt')">Open when you doubt yourself</button> -->
   <button class="btn" onclick="openCard('tired')">Open when you’re tired</button>
   <button class="btn" onclick="openCard('motivation')">Open when you need motivation</button>
-  <!-- <button class="btn" onclick="openCard('smiling')">Open when you’re smiling</button> -->
-  <!-- <button class="btn" onclick="openCard('feelClose')">Open when you want to feel close</button> -->
-  <!-- <button class="btn" onclick="openCard('thinkOfMe')">Open when you think of me</button> -->
-  <!-- <button class="btn" onclick="openCard('goodMood')">Open when you’re in a good mood</button> -->
-  <!-- <button class="btn" onclick="openCard('amazingDay')">Open when you had an amazing day</button> -->
-  <!-- <button class="btn" onclick="openCard('valentine')">Open on Valentine’s Day</button> -->
   <button class="btn" onclick="openCard('leloMischief')">Open when Lelo is up to mischief</button>
   <button class="btn" onclick="openCard('clientsCrazy')">Open when clients drive you crazy</button>
   <button class="btn" onclick="openCard('gym')">Open when you hit the gym</button>
@@ -50,82 +43,46 @@
 
 <!-- Карточки -->
 <div id="missMe" class="card">
-  <p>I know we’re apart right now, but every time you miss me, remember I’m thinking of you too 💌. Close your eyes and imagine we’re together for a moment.</p>
+  <h1>Open when you miss me</h1>
+  <p>I know we’re apart right now, but every time you miss me, remember I’m thinking of you too 💌 Close your eyes and imagine we’re together for a moment</p>
   <img src="images/miss_me.jpg" alt="Open when you miss me">
   <button class="back-btn" onclick="goBack()">Back</button>
 </div>
 
 <div id="cantSleep" class="card">
-  <p>Insomnia sucks, I know 😴. Take a deep breath, imagine something funny we did together, and let your mind relax. Sweet dreams are coming soon.</p>
+  <h1>Open when you can't sleep</h1>
+  <p>Insomnia sucks, I know 😴 Take a deep breath, imagine something funny we did together, and let your mind relax. Sweet dreams are coming soon</p>
   <img src="images/cant_sleep.jpg" alt="Open when you can't sleep">
   <button class="back-btn" onclick="goBack()">Back</button>
 </div>
 
 <div id="lonely" class="card">
-  <p>Feeling lonely is normal sometimes 🌙. Just remember you’re never truly alone — I’m always with you in thoughts and heart, and your little buddy Lelo is probably causing chaos too 🐶.</p>
+  <h1>Open when you feel lonely</h1>
+  <p>Feeling lonely is normal sometimes 🌙 Just remember you’re never truly alone — I’m always with you in thoughts and heart, and your little buddy Lelo is probably causing chaos too 🐶</p>
   <img src="images/lonely.jpg" alt="Open when you feel lonely">
   <button class="back-btn" onclick="goBack()">Back</button>
 </div>
 
 <div id="overthinking" class="card">
-  <p>Stop overthinking, love 💭. Breathe in, breathe out. Focus on one small thing you can enjoy right now, even if it’s just a cup of tea or a funny memory we share.</p>
+  <h1>Open when you’re overthinking</h1>
+  <p>Stop overthinking, love 💭 Breathe in, breathe out. Focus on one small thing you can enjoy right now, even if it’s just a cup of tea or a funny memory we share</p>
   <img src="images/overthinking.jpg" alt="Open when you’re overthinking"> 
   <button class="back-btn" onclick="goBack()">Back</button>
 </div>
 
-<!-- <div id="doubt" class="card">
-  <img src="https://via.placeholder.com/400x300.png?text=Doubt" alt="Open when you doubt yourself">
-  <p>Believe in yourself—you’re amazing 🌟</p>
-  <button class="back-btn" onclick="goBack()">Back</button>
-</div> -->
-
 <div id="tired" class="card">
-  <p>Rest is important, darling 😴. Let yourself take a break, put your feet up, and remember: it’s okay to pause. Tomorrow is another day to shine.</p>
+  <h1>Open when you’re tired</h1>
+  <p>Rest is important, darling 😴 Let yourself take a break, put your feet up, and remember: it’s okay to pause. Tomorrow is another day to shine</p>
   <img src="images/tired.jpg" alt="Open when you’re tired">
   <button class="back-btn" onclick="goBack()">Back</button>
 </div>
 
 <div id="motivation" class="card">
-  <p>You can do this 🌟! Every step counts, even the tiny ones. Keep moving forward — I’m rooting for you and I know you’re amazing.</p>
+  <h1>Open when you need motivation</h1>
+  <p>You can do this 🌟 Every step counts, even the tiny ones. Keep moving forward — I’m rooting for you and I know you’re amazing</p>
   <img src="images/motivation.jpg" alt="Open when you need motivation">  
   <button class="back-btn" onclick="goBack()">Back</button>
 </div>
-
-<!-- <div id="smiling" class="card">
-  <img src="https://via.placeholder.com/400x300.png?text=Smiling" alt="Open when you’re smiling">
-  <p>Smile bright, it suits you 😄</p>
-  <button class="back-btn" onclick="goBack()">Back</button>
-</div> -->
-
-<!-- <div id="feelClose" class="card">
-  <img src="https://via.placeholder.com/400x300.png?text=Feel+Close" alt="Open when you want to feel close">
-  <p>Even far away, we’re together in spirit 💖</p>
-  <button class="back-btn" onclick="goBack()">Back</button>
-</div> -->
-
-<!-- <div id="thinkOfMe" class="card">
-  <img src="https://via.placeholder.com/400x300.png?text=Think+of+Me" alt="Open when you think of me">
-  <p>Hope I pop into your thoughts 😉</p>
-  <button class="back-btn" onclick="goBack()">Back</button>
-</div> -->
-
-<!-- <div id="goodMood" class="card">
-  <img src="https://via.placeholder.com/400x300.png?text=Good+Mood" alt="Open when you’re in a good mood">
-  <p>Share your smile with the world 😁</p>
-  <button class="back-btn" onclick="goBack()">Back</button>
-</div> -->
-
-<!-- <div id="amazingDay" class="card">
-  <img src="https://via.placeholder.com/400x300.png?text=Amazing+Day" alt="Open when you had an amazing day">
-  <p>So glad your day was awesome 🎉</p>
-  <button class="back-btn" onclick="goBack()">Back</button> -->
-</div>
-
-<!-- <div id="valentine" class="card">
-  <img src="https://via.placeholder.com/400x300.png?text=Valentine" alt="Open on Valentine’s Day">
-  <p>Happy Valentine’s Day! ❤️</p>
-  <button class="back-btn" onclick="goBack()">Back</button>
-</div> -->
 
 <div id="leloMischief" class="card">
   <h1>Open when Lelo is up to mischief</h1>
@@ -135,72 +92,84 @@
 </div>
 
 <div id="clientsCrazy" class="card">
+  <h1>Open when clients drive you crazy</h1>
   <p>Those Indians again, huh? 😅 Take a pause, breathe, and remember: you’re a pro and you can handle anything. And don't throw your telephone at them please... Maybe reward yourself after with something nice!</p>
   <img src="images/clients.jpg" alt="Open when clients drive you crazy">  
   <button class="back-btn" onclick="goBack()">Back</button>
 </div>
 
 <div id="gym" class="card">
+  <h1>Open when you hit the gym</h1>
   <p>Time to grow muscles 💪✨ Keep sweating 🏋️‍♂️ and smiling 😁 I’m cheering for you 💖</p>
   <img src="images/gym.jpg" alt="Open when you hit the gym">
   <button class="back-btn" onclick="goBack()">Back</button>
 </div>
 
 <div id="dictatorMovie" class="card">
+  <h1>Open when you watch The Dictator</h1>
   <p>Time for some Alisson Burgers 🍔 or a reminder that Employees Mustwashhaands 🧼😆 Laugh a little 🎬 I’m laughing with you too 💖</p>
   <img src="images/dictator.jpg" alt="Open when you watch The Dictator"> 
   <button class="back-btn" onclick="goBack()">Back</button>
 </div>
 
 <div id="visa" class="card">
+  <h1>Open when you get your Russian visa</h1>
   <p>Congrats on getting your visa! ✈️ Countdown officially starts 🇷🇺✨ Can’t wait to see you 💌</p>  
   <img src="images/visa.jpg" alt="Open when you get your Russian visa">
   <button class="back-btn" onclick="goBack()">Back</button>
 </div>
 
 <div id="yellowCar" class="card">
+  <h1>Open when you spot a yellow car first</h1>
   <p>Haha, I spotted the yellow car first 🚗💛! You owe me a playful punch 👊😆 — just a little reminder that I’m paying attention </p>
   <img src="images/car.jpg" alt="Open when you spot a yellow car first">  
   <button class="back-btn" onclick="goBack()">Back</button>
 </div>
 
 <div id="dubai" class="card">
+  <h1>Open when Dubai feels too hot</h1>
   <p>Imagine I’m there with you 💖 Even from afar ☀️🏙️</p>
-  <img src="images/dubai.jpg" alt="Open when Dubai feels too hot or far">  
+  <img src="images/dubai.jpg" alt="Open when Dubai feels too hot">  
   <button class="back-btn" onclick="goBack()">Back</button>
 </div>
 
 <div id="hug" class="card">
-  <p>Sending you the biggest virtual hug 🤗. Imagine me wrapping my arms around you — hope it makes you smile and feel a little closer to me</p>  
+  <h1>Open when you need a hug</h1>
+  <p>Sending you the biggest virtual hug 🤗 Imagine me wrapping my arms around you — hope it makes you smile and feel a little closer to me</p>  
   <img src="images/hug.jpg" alt="Open when you need a hug">
   <button class="back-btn" onclick="goBack()">Back</button>
 </div>
 
 <div id="monday" class="card">
-  <p>Mondays are tough 🌞. Take it slow, grab your favorite coffee, and remember you’re capable of making this week great ☕</p>
+  <h1>Open when it’s Monday</h1>
+  <p>Mondays are tough 🌞 Take it slow, grab your favorite coffee, and remember you’re capable of making this week great ☕</p>
   <img src="images/monday.jpg" alt="Open when it’s Monday">  
   <button class="back-btn" onclick="goBack()">Back</button>
 </div>
 
 <div id="sick" class="card">
-  <p>Aw, feeling under the weather 🤒? Rest up, drink something warm, and imagine I’m bringing you soup and silly jokes to cheer you up.</p>
+  <h1>Open when you feel sick</h1>
+  <p>Aw, feeling under the weather 🤒? Rest up, drink something warm, and imagine I’m bringing you soup and silly jokes to cheer you up</p>
   <img src="images/sick.jpg" alt="Open when you feel sick">    
   <button class="back-btn" onclick="goBack()">Back</button>
 </div>
 
 <div id="ramadanStart" class="card">
-  <p>Ramadan Kareem 🌙✨! Wishing you peaceful days and meaningful moments. I’m thinking of you and sending warm vibes.</p>
+  <h1>Open when Ramadan begins</h1>
+  <p>Ramadan Kareem 🌙✨! Wishing you peaceful days and meaningful moments. I’m thinking of you and sending warm vibes</p>
   <img src="images/ramadan_start.jpg" alt="Open when Ramadan begins">  
   <button class="back-btn" onclick="goBack()">Back</button>
 </div>
 
 <div id="ramadanEnd" class="card">
+  <h1>Open when Ramadan ends</h1>
   <p>Eid Mubarak 🌙🎉! Hope you had a meaningful month. Celebrate, enjoy, and let’s plan some fun together soon</p>
   <img src="images/ramadan_end.jpg" alt="Open when Ramadan ends">
   <button class="back-btn" onclick="goBack()">Back</button>
 </div>
 
 <div id="songReminds" class="card">
+  <h1>Open when a song reminds you of me</h1>
   <p>Ah, that song popped up 🎵💖! Every note brings a little memory of us — hope it makes you smile and think of me too ❤️</p>
   <img src="images/song.jpg" alt="Open when a song reminds you of me">  
   <button class="back-btn" onclick="goBack()">Back</button>
