--- a/open_when.html
+++ b/open_when.html
@@ -17,9 +17,8 @@
 </head>
 <body>
 
-<h1>Open When</h1>
-
 <div id="home" class="button-grid">
+  <h1>Open When ...</h1>
   <button class="btn" onclick="openCard('missMe')">Open when you miss me</button>
   <button class="btn" onclick="openCard('cantSleep')">Open when you can't sleep</button>
   <button class="btn" onclick="openCard('lonely')">Open when you feel lonely</button>
@@ -43,21 +42,21 @@
 
 <!-- Карточки -->
 <div id="missMe" class="card">
-  <h2>Open when you miss me</h2>
+  <h1>Open when you miss me</h1>
   <p>I know we’re apart right now, but every time you miss me, remember I’m thinking of you too 💌 Close your eyes and imagine we’re together for a moment</p>
   <img src="images/miss_me.jpg" alt="Open when you miss me">
   <button class="back-btn" onclick="goBack()">Back</button>
 </div>
 
 <div id="cantSleep" class="card">
-  <h2>Open when you can't sleep</h2>
+  <h1>Open when you can't sleep</h1>
   <p>Insomnia sucks, I know 😴 Take a deep breath, imagine something funny we did together, and let your mind relax. Sweet dreams are coming soon</p>
   <img src="images/cant_sleep.jpg" alt="Open when you can't sleep">
   <button class="back-btn" onclick="goBack()">Back</button>
 </div>
 
 <div id="lonely" class="card">
-  <h2>Open when you feel lonely</h2>
+  <h1>Open when you feel lonely</h1>
   <p>Feeling lonely is normal sometimes 🌙 Just remember you’re never truly alone — I’m always with you in thoughts and heart, and your little buddy Lelo is probably causing chaos too 🐶</p>
   <img src="images/lonely.jpg" alt="Open when you feel lonely">
   <button class="back-btn" onclick="goBack()">Back</button>
