--- a/open_when.html
+++ b/open_when.html
@@ -5,14 +5,95 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Open When</title>
 <style>
-  body { font-family: Arial, sans-serif; background: #fff0f5; margin:0; padding:0; display:flex; flex-direction:column; align-items:center; }
+body {
+  background: linear-gradient(120deg, #ffe6f0, #ffd9ec, #ffe0f5);
+  font-family: Arial, sans-serif;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
   h1 { text-align:center; margin:20px; color:#ff69b4; }
   .button-grid { display:flex; flex-wrap:wrap; justify-content:center; gap:10px; width:90%; max-width:600px; }
-  .btn { background-color:#ffb6c1; border:none; padding:15px; border-radius:10px; color:white; font-size:16px; cursor:pointer; flex:1 1 45%; min-width:120px; transition:0.2s; }
-  .btn:hover { transform: scale(1.05); }
-  .card { display:none; flex-direction:column; align-items:center; padding:20px; width:90%; max-width:600px; text-align:center; }
-  .card img { max-width:100%; border-radius:15px; margin-bottom:15px; }
-  .back-btn { background-color:#ff69b4; border:none; padding:10px 20px; border-radius:8px; color:white; font-size:16px; cursor:pointer; margin-top:10px; }
+.btn {
+  background: linear-gradient(135deg, #ff9ac1, #ff6fa3);
+  border: none;
+  padding: 15px;
+  border-radius: 15px;
+  color: white;
+  font-size: 16px;
+  cursor: pointer;
+  flex: 1 1 45%;
+  min-width: 120px;
+  transition: 0.3s;
+  box-shadow: 0 5px 15px rgba(0,0,0,0.2);
+}
+.btn:hover {
+  transform: scale(1.08) rotate(-2deg);
+  box-shadow: 0 8px 20px rgba(0,0,0,0.3);
+}
+.card {
+  display: none;
+  flex-direction: column;
+  align-items: center;
+  padding: 20px;
+  width: 90%;
+  max-width: 600px;
+  text-align: center;
+  background: #fff8fb;
+  border-radius: 20px;
+  box-shadow: 0 10px 30px rgba(0,0,0,0.15);
+  animation: fadeIn 0.5s ease forwards;
+}
+
+@keyframes fadeIn {
+  from { opacity: 0; transform: scale(0.95); }
+  to { opacity: 1; transform: scale(1); }
+}
+  .card p {
+  font-size: 1.1em;
+  line-height: 1.5em;
+  color: #ff4d94;
+}
+.card img {
+  max-width: 90%;
+  border-radius: 20px;
+  margin-bottom: 15px;
+  border: 3px solid #ffb6c1;
+  box-shadow: 0 8px 25px rgba(0,0,0,0.2);
+}
+.back-btn {
+  background-color: #ff6fa3;
+  border: none;
+  padding: 12px 25px;
+  border-radius: 50px;
+  color: white;
+  font-size: 16px;
+  cursor: pointer;
+  box-shadow: 0 5px 15px rgba(0,0,0,0.2);
+  transition: 0.2s;
+}
+.back-btn:hover {
+  transform: scale(1.05) rotate(-2deg);
+  box-shadow: 0 8px 20px rgba(0,0,0,0.3);
+}
+  body::before {
+  content: '💖💌💛💖';
+  position: fixed;
+  top: 0;
+  left: 0;
+  font-size: 2em;
+  animation: floatHearts 10s linear infinite;
+  opacity: 0.3;
+}
+
+@keyframes floatHearts {
+  0% { transform: translateY(0) rotate(0deg); }
+  50% { transform: translateY(200px) rotate(180deg); }
+  100% { transform: translateY(0) rotate(360deg); }
+}
+
 </style>
 </head>
 <body>
